:lipstick: Prevent overflow of content

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -15,6 +15,8 @@ body
   background-size: cover
 
 #content
+  overflow: hidden
+
   > .container
     padding: 50px 30px 0 30px
     margin: 0 auto
